--- a/style.qss
+++ b/style.qss
@@ -1,5 +1,5 @@
 QPushButton {
-  border-radius: 4px;
+  border: none;
   background-color: #fafafa;
   margin-top: 0;
   height: 28px;
@@ -7,6 +7,26 @@ QPushButton {
 
 QPushButton:hover {
   background-color: #CCCCCC;
+}
+
+#subtab_holder {
+  background: #fafafa;
+}
+
+#tool_button {
+     background: #fafafa;
+     border: none;
+}
+
+#tool_button:hover {
+  border-radius: 4px;
+  background: #d3d3d3;
+}
+
+#tool_button:pressed {
+  border-radius: 4px;
+  border-style: inset;
+  background: #b4b4b4;
 }
 
 QPushButton:pressed {
@@ -47,25 +67,18 @@ QHBoxLayout {
  /* Style the tab using the tab sub-control. Note that
      it reads QTabBar _not_ QTabWidget */
  QTabBar::tab#action_toolbar {
-     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                 stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
-                                 stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
+    background: #d3d3d3;
      min-width: 8ex;
-     border: 2px solid #ffffff;
-     border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
+     border: 1px solid #ffffff;
      padding: 1px;
  }
 
  QTabBar::tab:selected#action_toolbar, QTabBar::tab:hover#action_toolbar {
-     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                 stop: 0 #fafafa, stop: 0.4 #f4f4f4,
-                                 stop: 0.5 #e7e7e7, stop: 1.0 #fafafa);
+   background: #fafafa;
  }
 
  QTabBar::tab:selected#action_toolbar {
-     border-color: #EFEFEE;
-     border-bottom-color: #F6F6F5; /* same as pane color */
+   border: none;
  }
 
  QTabBar::tab:!selected {
